refactor: added restructure and some suggestions

--- a/index.html
+++ b/index.html
@@ -1,8 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Planets</title>
+    <link rel="stylesheet" href="./asset/global.css">
+    <link rel="stylesheet" href="./asset/landing.css">
+    <title>Planets</title>
 </head>
 <body>
+
+<!--
+https://fontawesome.com/start
+
+Можещ да използваш този сайт за икони
+
+
+TODO: снимките са с голяма резолюция и зареждат бавно,
+може да потърсиш по-малки снимки за навигацията
+-->
+<section class="landing">
+    <nav>
+        <ul>
+            <li class="nav-link" id="sun"><a href="index.html"></a></li>
+            <li class="nav-link" id="mercury"><a href="mercury.html"></a></li>
+            <li class="nav-link" id="venus"><a href="venus.html"></a></li>
+            <li class="nav-link" id="earth"><a href="earth.html"></a></li>
+            <li class="nav-link" id="moon"><a href="moon.html"></a></li>
+            <li class="nav-link" id="mars"><a href="mars.html"></a></li>
+            <li class="nav-link" id="jupiter"><a href="jupiter.html"></a></li>
+            <li class="nav-link" id="saturn"><a href="saturn.html"></a></li>
+            <li class="nav-link" id="uranus"><a href="uranus.html"></a></li>
+            <li class="nav-link" id="neptune"><a href="neptune.html"></a></li>
+            <li class="nav-link" id="pluto"><a href="pluto.html"></a></li>
+        </ul>
+    </nav>
+
+    <div class="sun-background"></div>
+    <div class="landing-content">
+        <h1>The Solar system</h1>
+        <div class="landing-content-containers">
+            <div>
+                <h1>The Sun</h1>
+                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
+                    leap into electronic typesetting, remaining essentially unchanged.</p>
+            </div>
+            <div>
+                <h1>Information</h1>
+                <div class="landing-content-containers-details">
+                    <img src="./asset/svg/mass.svg" alt="">
+                    <span>2000</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 </body>
+
+<script src="./script/navigation.js"></script>
 </html>
